<resources>
    <string name="app_name">Tillapp</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrese">Registrese</string>
    <string name="repcontrasena">Repetir contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="principal">Principal</string>

    <string name="facebook_app_id">957249804413499</string>
    <string name="fb_login_protocol_scheme">fb957249804413499</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventario">Inventario</string>
    <string name="ventas">Ventas</string>
    <string name="cambiarFrag">Cambiar Fragment</string>
    <string name="title_activity_vistas">VistasActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
